--- a/client/package.json
+++ b/client/package.json
@@ -24,11 +24,14 @@
     "@heroui/use-theme": "2.1.6",
     "@react-aria/visually-hidden": "3.8.20",
     "@react-types/shared": "3.28.0",
+    "@reduxjs/toolkit": "^2.6.1",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "6.23.0",
+    "redux": "^5.0.1",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16"
   },
