--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@heroui/kbd": "^2.2.12",
     "@heroui/link": "^2.2.13",
     "@heroui/navbar": "^2.2.14",
+    "@heroui/react": "^2.7.5",
     "@heroui/snippet": "^2.2.17",
     "@heroui/switch": "^2.2.14",
     "@heroui/system": "2.4.12",
@@ -36,6 +37,7 @@
     "tailwindcss": "3.4.16"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
