--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,8 +16,8 @@
     "strictNullChecks": true,
     "skipDefaultLibCheck": true,
     "lib": ["ES6", "DOM"],
-    "types": ["node"],
-    "typeRoots": ["node_modules/@types"]
+    "types": ["node", "express"],
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   },
   "include": [
     "src/**/*.ts"
