--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "6.23.0",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "tailwind-variants": "0.3.0",
     "tailwindcss": "3.4.16"
   },
@@ -41,6 +42,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "8.11.0",
     "@typescript-eslint/parser": "8.11.0",
     "@vitejs/plugin-react": "^4.2.1",
