--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.13.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
+    "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "winston": "^3.17.0"
   },
