--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -18,7 +18,7 @@
     "strictNullChecks": true,
     "skipDefaultLibCheck": true,
     "lib": ["ES6", "DOM"],
-    "types": ["node", "express"],
+    "types": ["node", "express", "jest"],
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
   "include": [
