--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint -c .eslintrc.json ./src/**/**/*.{ts,tsx} --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@heroui/button": "^2.2.16",
@@ -38,6 +39,9 @@
     "tailwindcss": "3.4.16"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/axios": "^0.14.4",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
@@ -45,7 +49,8 @@
     "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "8.11.0",
     "@typescript-eslint/parser": "8.11.0",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "^3.0.9",
     "autoprefixer": "10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "9.1.0",
@@ -56,10 +61,12 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "4.1.4",
+    "jsdom": "^26.0.0",
     "postcss": "8.4.38",
     "prettier": "3.3.3",
     "typescript": "5.6.3",
     "vite": "^5.2.0",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^3.0.9"
   }
 }
