--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@heroui/use-theme": "2.1.6",
     "@react-aria/visually-hidden": "3.8.20",
     "@reduxjs/toolkit": "^2.6.1",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
@@ -47,14 +48,14 @@
     "@typescript-eslint/parser": "8.11.0",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^3.0.9",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "5.2.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-unused-imports": "4.1.4",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "jsdom": "^26.0.0",
     "prettier": "3.3.3",
     "typescript": "5.6.3",
